--- a/posts/2024-04-02-data-viz-course/index.qmd
+++ b/posts/2024-04-02-data-viz-course/index.qmd
@@ -6,12 +6,12 @@ author:
   - name: Samantha Csik
     url: https://samanthacsik.github.io/
     orcid: 0000-0002-5300-3075
-date: 2024-03-31
+date: 2024-04-02
 citation: 
   url: https://samanthacsik.github.io/posts/2024-03-31-data-viz-course/
 categories: [MEDS, R, data-visualization, pedagogy, curriculum-development]
 image: media/horst-eco-r4ds.png
-draft: true
+draft: false
 ---
 
 ::: {.center-text}
@@ -22,11 +22,11 @@ draft: true
 
 <br>
 
-<div class="dark-green-bg">**TL;DR** I recently developed and taught a grad-level course on data visualization & communication! It was incredibly challenging and equally rewarding. I began the planning process by defining the course learning objectives, which ultimately guided what topics to cover and ___. I implemented a version of specifications grading, where students have the opportunity to use feedback to revise / resubmit</div>
+<div class="dark-green-bg">**TL;DR** I recently developed and taught a grad-level course on data visualization & communication! It was incredibly challenging and equally rewarding. I began the planning process by defining the course learning objectives, which ultimately guided what topics to cover and how to design homework assignments. I implemented a version of specifications grading, where students have the opportunity to use feedback to revise and resubmit assignments for an improved score. I built out a [course website](https://samanthacsik.github.io/EDS-240-data-viz/) which housed all course-related content in one, easy-to-access place. Throughout the course, we prioritized transparency, goal-setting, and opportunities for instructor, TA, and peer-to-peer feedback on student-created data visualizations. I learned so much from other educators, both those that I know personally, and those who so willingly share their resources and ideas online.</div>
 
 <br>
 
-It felt like running a marathon at sprint speed at times (okay, almost the whole time), but I just finished teaching my first(!!) graduate-level course for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/academics-meds) (MEDS) program -- I'm so exhausted and so proud and I can't wait to (hopefully) do it again next year. While I've witnessed many incredible colleagues successfully teach really rad courses in this program since it first began in 2021, I still felt like I was stepping into a large unknown. Now that I'm through the other side, I wanted to reflect on my process, experience, and considerations. I've learned so much (*seriously sooooo much*) from other educators who have openly shared their materials and ideas online, and writing this here is my small way of trying to give back to that community.
+It felt like running a marathon at sprint speed at times (okay, almost the whole time), but I just finished teaching my first(!!) graduate-level course for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/academics-meds) (MEDS) program -- I'm so exhausted and so proud and I can't wait to (hopefully) do it again next year. While I've witnessed many incredible colleagues successfully teach really rad courses in this program since it first began in 2021, I still felt like I was stepping into a large unknown. Now that I'm through the other side, I wanted to reflect on my process, experience, and considerations. I've learned so much (*seriously sooooo much*) from other educators who have openly shared their materials and ideas online, and writing this here is my small way of trying to to do the same.
 
 ## First, some context
 
@@ -85,23 +85,25 @@ Some action items needed to be addressed in advance of even beginning to plan th
 
 **I set my maximum enrollment to 40 students and ultimately ended up with 37** -- this included all 31 MEDS students, 4 [Master of Environmental Science & Management]() (MESM) students, and 2 non-Bren students. Non-MEDS students were required to reach out to me and confirm that they met course prerequisites (they needed to have taken at least one prior course taught in R + have familiarity with git / GitHub) before receiving an enrollment code. 
 
-**Students would also be required to enroll in one of two 50min-long discussion sections** -- these are new to MEDS this 2023-2024 academic year and each instructor has used them in slightly different ways. I had no idea how these would look until I got farther along in the course planning process (more on that later). 
+**Students would also be required to enroll in one of two 50 minute-long discussion sections** -- these are new to MEDS this 2023-2024 academic year and each instructor has used them in slightly different ways. I had no idea how these would look until I got farther along in the course planning process (more on that later). 
 
 ## My preparation timeline{#timeline}
 
-**I spent about 7 months sincerely preparing for and teaching EDS 240 (not including the application and interview process).** I recognize that's a loonnggg runway and that not every instructor is afforded the time or has the capacity to do the same. As an existing employee of the MEDS program whose responsibilities are largely centered around teaching, I was allowed the time and space to think deeply about this course. I'm a super nervous planner when it comes to anything work / teaching-related (hello, imposter syndrome!), so I personally needed this prep time to feel like I had things (sort of) under control. Here's how that timeline roughly shook out:
+**I spent about 7 months sincerely preparing for and teaching EDS 240 (not including the application and interview process).** I recognize that's a long runway and that not every instructor is afforded the time or has the capacity to do the same. As an existing employee of the MEDS program whose responsibilities are largely centered around teaching, I was allowed the time and space to think deeply about this course. I'm a super nervous planner when it comes to anything work / teaching-related (hello, imposter syndrome!), so I personally needed this prep time to feel like I had things (sort of) under control. Here's how that timeline roughly shook out:
 
 ***Note:** I'm also including information about the application process here -- it was totally foreign to me, and while this is specific to UCSB / Bren, I imagine other institutions may follow a similar process.*
 
 - **April 2023:** Submitted my application for [Teaching Positions, Bren School of Environmental Science & Management](https://recruit.ap.ucsb.edu/JPF02448) -- this is a general call for [Unit 18 Faculty](https://ap.ucsb.edu/policies.and.procedures/red.binder/sections/%5B2_01%5D%20Unit%2018%20Faculty%20and%20Supervisor%20of%20Teacher%20Education%20Series.pdf) (often referred to as Lecturers). Applications require a cover letter, CV, Teaching Statement, and three references. You are asked to specify which course(s) you are interested in teaching.
-- **June 2023:** Interviewed -- this hour-long interview began with a 10min teaching demo followed by ~10min of Q&A. Your demo must be related to the topic area of the course you're intending to teach (i.e. in my case, it needed to be about data viz). I chose to do a live coding demo, since my vision for EDS 240 would involve a lot of that (see [Nederbragt et al. (2020)](tps://doi.org/10.1371/journal.pcbi.1008090) for more on this teaching technique).
-- **September 2023:** Signed my contract. After negotiations, I ended up at 50% time in my typical full-time role (Data Training Coordinator, more formally classified as Academic Coordinator I), 33% time as Unit 18 Lecturer, and 17% time for curriculum development. It's important to note that these appointments are for the quarter in which the course is taught *only* (e.g. winter quarter, Jan - Mar 2024). The lecturer salary scale is higher than than my current full-time salary, so this split appointment meant I would earn a bit more during winter quarter. Once signed, I got started working on the course syllabus.
+
+- **June 2023:** Interviewed -- this hour-long interview began with a 10min teaching demo followed by ~10min of Q&A. Your demo must be related to the subject area of the course you're intending to teach (i.e. in my case, it needed to be about data viz). I chose to do a live coding demo, since my vision for EDS 240 would involve a lot of that (see [Nederbragt et al. (2020)](https://doi.org/10.1371/journal.pcbi.1008090) for more on this teaching technique).
+
+- **September 2023:** Signed my contract. After negotiations, I ended up at 50% time in my typical full-time role (Data Training Coordinator, more formally classified as Academic Coordinator I), 33% time as Unit 18 Lecturer, and 17% time for curriculum development. It's important to note that these appointments are *only* for the quarter in which the course is taught (i.e. winter quarter, Jan - Mar 2024). The lecturer salary scale is higher than than my current full-time salary, so this split appointment meant I would earn a bit more during winter quarter. Once signed, I got started working on the course syllabus.
 
 - **October - November 2023:** While my appointment didn't officially start until January, I spent about 30-40hrs/week prepping for the class during fall quarter (which is a lot of time...this is not an attempt to applaud "the grind," but rather reflect how this experience played out for me). I focused primarily on the syllabus, grading structure, drafting high-level outlines of weekly topics, building the skeleton of the course website, and learning other necessary classroom management tools (I'll elaborate more on all of these in the next sections). I was able to prep ~2 of 4 homework assignments (plus jot down ideas for others), and even a couple early lectures. I also spent ~30hrs/week teaching my typical fall workshops, reviewing / updating materials for [EDS 430: Intro to Shiny](https://ucsb-meds.github.io/EDS-430-Intro-to-Shiny/) (a 2-day short course that I also teach in winter quarter), and other MEDS administrative stuff.
 
-- **December 2023:** Oof, this was definitely the hardest month out of the whole experience -- while most folks were winding down after a busy fall quarter, I felt like I had to ramp up (more so than I already had been). I was also tired from a stacked fall and wanted so desperately for a break that I felt like I couldn't really take. I was also coming to terms with the fact I would absolutely not have the whole course planned / materials created ahead of the January 8th start date ({{< fa face-grin-beam-sweat title="a grinning face with a drop of sweat dripping from it's brow" >}} yes, that was incredibly naive thinking on my part). I *did* hope to have materials / plans for the first 6 weeks of the quarter largely created -- I had a number of other non-EDS 240 events, teaching, and responsibilities during this first half of the quarter and I was genuinely worried about not having enough time to do it all.
+- **December 2023:** Oof, this was definitely the hardest month out of the whole experience -- while most folks were winding down after a busy fall quarter, I felt like I had to ramp up (more so than I already had been). I was also tired from a stacked fall and wanted so desperately for a break that I felt like I couldn't really take. I was also coming to terms with the fact I would absolutely not have the whole course planned / materials created ahead of the January 8th start date ({{< fa face-grin-beam-sweat title="a grinning face with a drop of sweat dripping from it's brow" >}} yes, that was incredibly naive thinking on my part). I *did* hope to have materials and plans for the first 6 weeks of the quarter largely created -- I had a number of other non-EDS 240 events, teaching, and responsibilities during this first half of the quarter and I was genuinely worried about not having enough time to do it all.
 
-- **January - March 2023:** Here we go! By this point, I had weeks 1-4 fully planned, weeks 5-6 outlined(ish), and weeks 7-10 were largely untouched (aside from having scheduled [Allison Horst](https://github.com/allisonhorst/)'s guest lecture on using Observable JS to create interactive viz during week 9!). I tried my best to work ahead and continue prepping future lectures / assignments / etc. but this wasn't totally sustainable. By ~week 5, I was prepping each lecture the week before delivering it. That said, I had compiled so many resources and jotted down so many random ideas as I came across things, so creating new lectures did get a bit easier as time went on.
+- **January - March 2023 (winter quarter):** Here we go! By this point, I had weeks 1-4 fully planned, weeks 5-6 outlined(ish), and weeks 7-10 were largely untouched (aside from having scheduled [Allison Horst](https://github.com/allisonhorst/)'s guest lecture on using Observable JS to create interactive viz during week 9!). I tried my best to work ahead and continue prepping future lectures / assignments / etc. but this wasn't totally sustainable. By ~week 5, I was prepping each lecture the week before delivering it. That said, I had compiled so many resources and jotted down so many random ideas as I came across things, so creating new lectures did get a bit easier as time went on.
 
 ## Building the course
 
@@ -117,7 +119,7 @@ I'll walk through each of these in a bit more detail, then wrap up with some thi
 
 ### 1. Build the course syllabus{#syllabus}
 
-This was probably the most intimidating part, given that it's the one place to comprehensively describe all aspects of course proceedings -- from (tentative) topics covered to assignment due dates, and grading schemes to course policies. **I chose to begin with defining the course's learning objectives, i.e. what I wanted all students to feel comfortable with / confident in by the end of the course.** It was really important to me that I blended both technical skills (e.g. using `{ggplot2}`) with information design theory and a solid conceptual understanding of what makes a good data visualization (i.e. transferable knowledge, regardless of the programming language / data viz tool of choice).
+This was probably the most intimidating part, given that it's the one place to comprehensively describe all aspects of course proceedings -- from (tentative) topics covered to assignment due dates, and grading schemes to course policies. **I chose to begin with defining the course's learning objectives, i.e. what I wanted all students to feel comfortable with and be able to execute on by the end of the course.** It was really important to me that I blended both technical skills (e.g. using `{ggplot2}`) with information design theory and a solid conceptual understanding of what makes a good data visualization (i.e. transferable knowledge, regardless of the programming language / data viz tool of choice).
 
 After a lot of iterating, seeking feedback from a mix of past MEDS students (now NCEAS data scientists) and other NCEAS educators, I ended up with a list of six learning objectives (check out the [syllabus](https://docs.google.com/document/d/1iv-bsakUA-7FDSZCt0Qq1TUYXBzq0cktzLlxV2AxhZc/edit#heading=h.thw5uolxraye) to see what they are!). **Next, I began mapping out tentative topics by date**, being mindful of holidays (no lectures during weeks 2 & 7), large non-EDS 240 deadlines (e.g. [MEDS Capstone](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/meds-capstone-projects) faculty reviews), and the skills we'd need to cover ahead of distributing each new homework assignment. This schedule was a detailed draft at best -- topics were shifted around a bit or dropped entirely leading up to the start of the quarter and even during the quarter (once I had a better understanding of how much I could realistically cover in a given class).
 
@@ -143,7 +145,7 @@ Higher Education”, by David Clark & Robert Talbert*
 
 <br>
 
-Why implement something like specs grading? **“Traditional” grading (assigning points to one-time assessments and aggregating those points into a letter grade for a course) comes with a variety of challenges:**
+Why implement something like specs grading? **“Traditional” grading (assigning points to one-time assessments and aggregating those points into a letter grade for a course) comes with a variety of challenges** (summarized from *Grading for Growth*):
 
 - It **lacks feedback loops** -- there are (often) no reattempts or revisions of work based on feedback, making it difficult for students to demonstrate (and instructors to assess) learning or growth
 - It disproportionately **benefits students who learn fast**, or who already have familiarity with the material
@@ -229,7 +231,7 @@ I tend to pack *a lot* of explanatory information and code in my teaching materi
 - it makes it easier for students to go back and **review content after class, or catch up** if they happen to miss a lecture
 - they **serve as my own teaching notes** and make reviewing materials ahead of teaching a bit easier 
 - **I don't typically show all slides while teaching** -- anytime we encounter a slide with code on it, we'll instead pop over to RStudio for a live-coding exercise
-  - the slides offer both **textual explanations and the code "key,"** should students need to refer to it at any point during lecture (e.g. if they fall behind during live-coding, need to copy a code chunk to move forward because they can't quite spot the typo, etc.)
+  - the slides offer both **textual explanations and the code "key,"** should students need to refer to it at any point during lecture (e.g. if they fall behind during live-coding, or need to copy a code chunk to move forward because they can't quite spot the typo)
 
 ```{r}
 #| eval: true
@@ -240,7 +242,7 @@ knitr::include_graphics("media/slide-example.png")
 ```
 
 ::: {.center-text .small-text}
-*An example of a slide that I wouldn't necessarily show on screen, but rather move to RStudio to live-code and talk through. The textual information serves as information for students to refer back to, and the embedded code makes copying / pasting easy should anyone fall behind (I always encourage learners to type as much as they can by hand during class).*
+*An example of a slide that I wouldn't necessarily show on screen, but rather move to RStudio to live-code and talk through. The textual content serves as information for students to refer back to, and the embedded code makes copying / pasting easy should anyone fall behind (I always encourage learners to type as much as they can by hand during class).*
 :::
 
 Some potentially helpful tips: 
@@ -270,7 +272,7 @@ All assignments were posted to the [course website](https://samanthacsik.github.
 
 ##### (a) GitHub Classroom{#gh-classroom} 
 
-Self-reflections and parts of the first two homework assignments were distributed and managed using **[GitHub Classroom](https://docs.github.com/en/education/manage-coursework-with-github-classroom/get-started-with-github-classroom/about-github-classroom), a service that allows educators to create and manage digital classrooms and distribute / track assignments**. While there was a bit of a learning curve, I ultimately found it to be a fairly intuitive way to track assignment submissions. In a nutshell, GitHub Classroom allows you to easily distribute assignment repositories (containing template files, starter code, etc.) as forks to all rostered students. I got started by following these [instructions](https://docs.google.com/document/d/1ul63iuNWcy49exHIf2Xw7oeodT503oC-ebAbdhpPr90/edit?usp=sharing) (though note the [upcoming changes](https://github.blog/changelog/2024-01-22-migrating-github-classroom-assignment-repository-creation-from-create-from-template-to-forks-public-beta/) to assignment repos). 
+Self-reflections and parts of the first two homework assignments were distributed and managed using **[GitHub Classroom](https://docs.github.com/en/education/manage-coursework-with-github-classroom/get-started-with-github-classroom/about-github-classroom), a service that allows educators to create and manage digital classrooms and distribute / track assignments**. While there was a bit of a learning curve, I ultimately found it to be a fairly intuitive way to track assignment submissions. In a nutshell, **GitHub Classroom allows you to easily distribute assignment repositories (containing template files, starter code, etc.) as forks to all rostered students**. I got started by following these [instructions](https://docs.google.com/document/d/1ul63iuNWcy49exHIf2Xw7oeodT503oC-ebAbdhpPr90/edit?usp=sharing) (though note the [upcoming changes](https://github.blog/changelog/2024-01-22-migrating-github-classroom-assignment-repository-creation-from-create-from-template-to-forks-public-beta/) to assignment repos). 
 
 ```{r}
 #| eval: true
@@ -313,7 +315,7 @@ A major challenge when teaching technical skills (e.g. coding) is assisting stud
 
 #### Grading
 
-**Sevan and I split grading.** I read and wrote responses to student self-reflections, while Sevan graded homework assignments 1-3 (along with any that were revised / resubmitted for a regrade), in accordance with the provided rubrics. I provided written feedback to all students on homework #3 (separate from their grades), since this assignment asked for the first complete draft of all data visualizations which would be submitted as part of their [final course assignment](https://samanthacsik.github.io/EDS-240-data-viz/assignments/HW4.html). I chose to grade these final assignments (along with any regrades), in part because I wanted to understand where tweaks could me made for next year, and also because I was super excited to dive into what students had created throughout the quarter.
+**Sevan and I split grading.** I read and wrote responses to student self-reflections, while Sevan graded homework assignments 1-3 (along with any that were revised / resubmitted for a regrade), in accordance with the provided rubrics. I provided written feedback to all students on homework #3 (separate from their grades), since this assignment asked for the first complete draft of all data visualizations which would be submitted as part of their [final course assignment](https://samanthacsik.github.io/EDS-240-data-viz/assignments/HW4.html). I also chose to grade these final assignments (along with any regrades), in part because I wanted to understand where tweaks could me made for next year, and also because I was super excited to dive into what students had created throughout the quarter.
 
 ## Other musings
 
@@ -331,7 +333,9 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 ### Some things that worked well 
 
-- **Specs grading!** -- I would absolutely implement it again (for this course, and / or others). While it does require more work up from (e.g. building clear assignment rubrics, determining exactly what a student needs to do to earn a particular grade in the course), I really do think it allowed me to focus on the more fun (and important) parts of teaching (e.g. providing feedback on assignments, soliciting and acting on student feedback throughout the course) 
+- **Specs grading!** -- I would absolutely implement it again (for this course, and / or others). While it does require more work up from (e.g. building clear assignment rubrics, determining exactly what a student needs to do to earn a particular grade in the course), I really do think it allowed me to focus on the more fun (and important) parts of teaching (e.g. providing constructive feedback on assignments, soliciting and acting on student feedback throughout the course) 
+
+- **Randomly assigning new "learning partners" for each lecture** -- learning partners were a mix of accountability-buddies, people to help troubleshoot with, and group mates for any in-class activities. I was originally motivated to facilitate student mixing (folks tend to sit in the same seats with the same people throughout the year) and encourage students to help one another problem solve. These were super popular -- students consistently requested more opportunities to engage with their learning partners throughout the course. I also received written feedback from non-MEDS students that it made meeting people and integrating with the MEDS cohort much easier. 
 
 - **Providing the dates that each homework would be assigned and due in the syllabus (and on day 1 of class),** which helped everyone plan out their quarters. Students were juggling two other courses, plus work on their capstones (along with any other jobs, personal matters, life). 
 
@@ -349,7 +353,7 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 - **Saving all the awesome resources** that I came across while building lectures, and adding them to the [course website](https://samanthacsik.github.io/EDS-240-data-viz/resources.html) -- I was motivated by slightly selfish reasons (I didn't want to lose track of the bazillion tabs I had open at any given time), but it was also a great place to point students to when they were looking for a place to start or resources on a particular topic.
 
-- **Asking students to complete anonymous [short surveys](https://samanthacsik.github.io/EDS-240-data-viz/assignments.html#end-of-class-surveys) at the end of each class**, which were an easy way for me to quickly assess areas of confusion and seek feedback while things were fresh in everyone's minds (completing these also counted towards their course grade). I tried my best to address recurring points of confusion by following up with further explanations and resources in the class Slack channel. Survey questions were as follows:
+- **Asking students to complete [short surveys](https://samanthacsik.github.io/EDS-240-data-viz/assignments.html#end-of-class-surveys) at the end of each class**, which were an easy way for me to quickly assess areas of confusion and seek feedback while things were fresh in everyone's minds (completing these also counted towards their course grade). I tried my best to address recurring points of confusion by following up with further explanations and resources in the class Slack channel. Survey questions were as follows:
   - [Pacing was ___ (multiple choice: too fast, too slow, just right)]{.small-text}
   - [Today, I felt ___ (multiple choice: engaged / focused / excited, disengaged / distracted / not very excited, neutral / somewhere in the middle)]{.small-text}
   - [One thing I feel that I have a good understanding of now is ___ (short answer)]{.small-text}
@@ -372,9 +376,9 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 - **Teaching *anything* requires sooo much learning, both on the subject matter side and *importantly* on the pedagogical side.** I knew that I'd be spending a whole lot of time diving into the (overwhelmingly massive) field of data viz, but the sheer amount of time I spent figuring out exactly *how* I would lead this course caught me by surprise. I'm honestly really proud of how it all turned out, and I credit that largely to the initial pedagogical planning (please also find the names of those who helped me on this journey in the next section!).
 
-- **Teaching is a really vulnerable act!** No matter how much prep you do, you'll get asked questions that you don't know the answers to, be confronted with situations you don't quite know how to navigate, and likely make (many) mistakes. I prepped *so* much, in part because I was scared of making any mistakes (which I of course made anyway). This quarter was a great reminder that transparency is key, and that more often than not, students are really understanding. Taking a bit time to respond to any outstanding questions in the class Slack channel, or explaining the reasoning behind policy decisions goes a long way.
+- **Teaching is a really vulnerable act!** No matter how much prep you do, you'll get asked questions that you don't know the answers to, be confronted with situations you don't quite know how to navigate, and likely make (many) mistakes. I prepped *so* much, in part because I was scared of making any mistakes (which I of course made anyway). This quarter was a great reminder that transparency is key, and that more often than not, students are really understanding. Taking a bit time to respond to any outstanding questions in the class Slack channel, or explaining the reasoning behind policy decisions went a long way.
 
-- **You're going to get *a lot* of feedback.** Some of it will certainly help to improve your course / teaching. But it's also okay to consider, then ignore feedback too. Ultimately, we are tasked with thinking *really* long and hard about what topics to teach, how to teach them, course policies, etc. and we make deliberate decisions in our planning. It's okay to stand by those decisions. While not teaching-specific, I really appreciated Dorie Clark's piece on [When it's OK to Ignore Feedback](https://hbr.org/2015/08/when-its-ok-to-ignore-feedback) (Harvard Business Review). 
+- **You're going to get *a lot* of feedback.** Some of it will certainly help to improve your course and teaching approaches. But it's also okay to consider, then ignore feedback too. Ultimately, we are tasked with thinking *really* long and hard about what topics to teach, how to teach them, course policies, etc. and we make deliberate decisions in our planning. It's okay to stand by those decisions. While not teaching-specific, I really appreciated Dorie Clark's piece on [When it's OK to Ignore Feedback](https://hbr.org/2015/08/when-its-ok-to-ignore-feedback) (Harvard Business Review). 
 
 - **Burnout is real. Find ways to take care of yourself.** There was a point around week 7 where I wanted to think about anything other than putting together my next lecture. The remaining topics really excited me, but I was *struggling mightily* to focus. I stressed for a while about it, but eventually found myself some grace. I spent a couple days working on a completely unrelated project, walked my dog in the middle of the work day, took slightly longer lunch breaks, and maintained my typical workout schedule. It was a much needed change of pace that helped me find my groove again.
 
@@ -384,7 +388,7 @@ This may (definitely) be sappy, but I truly would not be where I am or doing wha
 
 Figuring out where to start is often the hardest part, and finding inspiration from educators who openly shared their materials online was a true blessing. Many many thanks to **[Meghan Hall](https://meghan.rbind.io/)** and **[Andrew Heiss](https://www.andrewheiss.com/)**, whose courses ([CMU 36-315: Statistical Graphics & Visualization](https://cmu-36315.netlify.app/) & [PMAP 8101: Data Visualization with R](https://datavizs23.classes.andrewheiss.com/)) provided some much needed inspiration and helped me find my feet. I reference a whole lot of work by **[Cédric Scherer](https://www.cedricscherer.com/)**, but was especially grateful to come across his jam-packed 2-day workshop, [Graphic Designs with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) from rstudio::conf(2022). 
 
-Teaching is truly an art, and I'm lucky to be surrounded by folks who think really hard about how to do it well. Thank you to **[Nate Emery](http://nathanemery.com/)**, who first introduced me to the concept of alternative grading and gave me the resources and encouragement to give it a try myself. To my colleague, dear friend, and biggest hype woman, **[An Bui](https://an-bui.com/)**, who is both a brilliant data scientist and deeply intentional educator. Adopting her student self-reflection exercises was one of my favorite parts of this course. And of course to, **[Allison Horst](https://allisonhorst.github.io/)** who has a gift like no other -- her approach to teaching has inspired me since my earliest days as a budding data scientist and educator. Find her [artwork](https://allisonhorst.com/) adorning nearly every page of the course website. 
+Teaching is truly an art, and I'm lucky to be surrounded by folks who think really hard about how to do it well. Thank you to **[Nate Emery](http://nathanemery.com/)**, who first introduced me to the concept of alternative grading and gave me the resources and encouragement to give it a try myself. To my colleague, dear friend, and biggest hype woman, **[An Bui](https://an-bui.com/)**, who is both a brilliant data scientist and deeply intentional educator. Adopting her student self-reflection exercises was one of my favorite parts of this course. And of course, to **[Allison Horst](https://allisonhorst.github.io/)**, who has a gift like no other -- her approach to teaching has inspired me since my earliest days as a budding data scientist and educator. Find her [artwork](https://allisonhorst.com/) adorning nearly every page of the course website. 
 
-And finally, thank you to **[Julie Lowndes](https://jules32.github.io/)**, for being one of my greatest role models in the open data science movement, and for always encouraging me to share my experiences through writing.
+And finally, thank you to **[Julie Lowndes](https://jules32.github.io/)**, for being one of my greatest role models in the open data science movement, and for encouraging me to share my experiences through writing.
 
